--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -463,3 +463,9 @@ footer a {
     padding: .5em;
     font-size: 2.5rem;
 }
+
+@media (max-width: 900px) {
+    .social-list__link {
+        font-size: 1.2rem;
+    }
+}
